--- a/style.css
+++ b/style.css
@@ -5,6 +5,22 @@ body {
 
 h1 {
 	text-align: center;
+	font-size: 30px;
+	border-style: ridge;
+	padding: 25px;
+	background-color: rgba(155, 200, 100, 0.5);
+	margin-top: 50px;
+	margin-bottom: 50px;
+	margin-right: 50px;
+	margin-left: 50px;
+/*	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+*/	/*border-radius: 25px;*/
+}
+
+
+
+h2 {
+	text-align: center;
 	font-size: 20px;
 	border-style: ridge;
 	padding: 25px;
